REGRESSION (Safari 13.1?): Web Inspector: Debugger hang at breakpoint when using Keyboard Maestro https://bugs.webkit.org/show_bug.cgi?id=210177 <rdar://problem/61485723>

Reviewed by Joseph Pecoraro.

Partial revert of r251036 <https://webkit.org/b/202716> to go back to using AppKit APIs
instead of `CFRunLoopRunInMode`. Only seems to affect WebKitLegacy.

* inspector/PageScriptDebugServer.h:
* inspector/PageScriptDebugServer.cpp:
(WebCore::PageScriptDebugServer::runEventLoopWhilePausedInternal):
(WebCore::PageScriptDebugServer::platformShouldContinueRunningEventLoopWhilePaused):
* inspector/mac/PageScriptDebugServerMac.mm: Added.
(WebCore::PageScriptDebugServer::platformShouldContinueRunningEventLoopWhilePaused):

* SourcesCocoa.txt:
* WebCore.xcodeproj/project.pbxproj:


Canonical link: https://commits.webkit.org/223277@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259931 268f45cc-cd09-0410-ab3c-d52691b4dbfc