Source/WebCore/inspector/PageScriptDebugServer.h
@@ -58,6 +58,8 @@ private:
     void setJavaScriptPaused(const PageGroup&, bool paused);
     void setJavaScriptPaused(Frame&, bool paused);
 
+    bool platformShouldContinueRunningEventLoopWhilePaused();
+
     Page& m_page;
 };
 
